# opengl_playground

./: CMakeLists.txt  main.cpp
shaders/: fragment.shader  vertex.shader
src/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
